2003-09-15	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added extra information about CDma.
	* Added tl880_set_dpc_clock.
	* Added some comments to tl880.h.
	* Added pci_dev and DMA buffer to struct tl880_dev.
	* Added DMA buffer allocate/deallocate to tl880kern.c.
	* Added new DMA function to tl880dma.c.
	* Added some more comments to tl880kern.c.
	* Fixed potential memory leak if memory mapping failed.

2003-09-13	Mike Bourgeous		<nitrogen@slimetech.com>

	* At least one DPC interrupt type now works.
	* Added names to two register regions in tl880doc.txt

2003-09-12	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added interrupt handler for VPIP and started DPC handler.
	* Bottom half only queued for tasks that will take a long time.
	* Added some more cJanus info to myhd_154.txt.
	* Added additional info to one of the VPIP bitfields.
	* Added more to DPC handler.
	* Added more info about tagContext to doc/myhd_154.txt.

2003-09-11	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added interrupt count variables to struct tl880_dev.
	* Added variables to struct tl880_dev for all known interrupt types.
	* Renamed create_tl880 to tl880_create_dev.

2003-09-09	Mike Bourgeous		<nitrogen@slimetech.com>

	* Tidied up driver/tl880demux.c a bit.
	* Added new functions from tl880{demux,dma}.c to tl880.h.

2003-09-08	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added information on TL850InterruptVectorString to doc/myhd_154.txt.

2003-09-06	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added driver/tl880demux.c for demux functions.
	* Added information on cSemaphore to doc/myhd_154.txt.
	* Added driver/tl880dma.c for DMA functions.
	* Removed debuglogs/ information from README.

2003-08-26	Mike Bourgeous
	
	* Added driver/tl880modes.c for a future video mode table.

2003-08-25	Mike Bourgeous		<nitrogen@slimetech.com>

	* Added HiPix I2C devices to doc/i2c.txt
	* Added correct HiPix card detection to driver/tl880kern.c