@@ -448,7 +448,7 @@ register 10000 is display options bitfield:
 	00000000|00000000|0000nnnn|nnnn0000	Q - Vertical Front Porch 1
 	00000000|0nnnnnnn|nnnn0000|00000000	R - Vertical Size 1
 	0000nnnn|00000000|00000000|00000000	S - Vertical Back Porch 1
-	00010000|00000000|00000000|00000000	T - 1
+	00010000|00000000|00000000|00000000	T - NTSC? 1
 
 10020 DPC sync register 4 (bottom field)
 
